# opencv

./: CMakeLists.txt  README.md  main.cpp
operncv-python/: image_display.py
